--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,3 +170,51 @@ a{
     }
 
 }
+@media only screen and (max-width: 880px){
+    header{
+        position:static;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+    }
+    .port-cont{
+    flex-direction: column;
+        align-items: center;
+        width:20px;
+    }
+    .nav-cont{
+        margin:0 auto;
+        float: none;
+        overflow: auto;
+        display: flex;
+        justify-content: center;
+        width:600px;
+    }
+    .nav-bar{
+        margin: 0 auto;
+        flex-direction: column;
+        height:200px;
+        align-items: center;
+    }
+    .nav-bar a{
+        margin-bottom: 20px;
+        width:100%;
+        text-align: center;
+    }
+    .logo{
+        font-size: 4rem;
+    }
+}
+@media only screen and (max-width: 610px){
+    .nav-cont{
+        width:300px;
+    }
+    .port-item{
+        width:350px;
+    }
+    .port-item img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+}
