--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,12 +118,12 @@ a {
     text-transform: uppercase;
 }
 
-.nav-cont {
+.nav-container {
     float: right;
     width: 700px;
 }
 
-.port-cont {
+.port-container {
     display: flex;
     justify-content: space-between;
     width: 1000px;
@@ -134,7 +134,7 @@ a {
     width: 400px;
 }
 
-.about-cont {
+.about-container {
     display: flex;
     justify-content: space-around;
     width: 1000px;
@@ -186,7 +186,7 @@ a {
     width: 500px;
 }
 
-.social-cont {
+.social-container {
     display: block;
     height: 140px;
     width: 900px;
@@ -217,7 +217,7 @@ a {
 }
 
 @media only screen and (max-width: 1050px) {
-    .port-cont {
+    .port-container {
         width: 900px;
     }
 
@@ -225,7 +225,7 @@ a {
         width: 800px;
     }
 
-    .about-cont {
+    .about-container {
         flex-direction: column;
         align-items: center;
         height: 700px;
@@ -240,7 +240,7 @@ a {
 }
 
 @media only screen and (max-width: 930px) {
-    .port-cont {
+    .port-container {
         width: 850px;
     }
 
@@ -252,7 +252,7 @@ a {
         margin-top: 0px;
     }
 
-    .about-cont {
+    .about-container {
         height: 1000px;
 
     }
@@ -265,7 +265,7 @@ a {
         float: none;
     }
 
-    .social-cont {
+    .social-container {
         width: 280px;
         margin: 0 auto;
         height: 280px;
@@ -282,13 +282,13 @@ a {
         justify-items: center;
     }
 
-    .port-cont {
+    .port-container {
         flex-direction: column;
         align-items: center;
         width: 20px;
     }
 
-    .nav-cont {
+    .nav-container {
         margin: 0 auto;
         float: none;
         overflow: auto;
@@ -323,7 +323,7 @@ a {
 }
 
 @media only screen and (max-width: 610px) {
-    .nav-cont {
+    .nav-container {
         width: 300px;
     }
 
@@ -375,7 +375,7 @@ a {
         margin: 0;
     }
 
-    .social-cont {
+    .social-container {
         width: 300px;
     }
 
