--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,6 +46,7 @@ h2 {
 
 .skills h2 {
     color: #EAE2B7;
+    margin: 10px 0;
 }
 
 .bio h2 {
@@ -157,7 +158,15 @@ a {
     width: 350px;
     padding: 10px;
 }
+.skill-container{
+    display: flex;
+    justify-content: space-around;
+}
+.skill-img{
+    height:80px;
+    width:80px;
 
+}
 .exp-img {
     height: 150px;
     width: 150px;
@@ -224,13 +233,12 @@ a {
     .about-container {
         flex-direction: column;
         align-items: center;
-        height: 700px;
+        height: 550px;
         width: 300px;
     }
 
     .skills {
-        margin-top: 60px;
-        background-color: #F77F00;
+        margin-top: 0;
     }
 
 }
@@ -245,11 +253,11 @@ a {
     }
 
     .skills {
-        margin-top: 0px;
+        margin-top: 0;
     }
 
     .about-container {
-        height: 1000px;
+        height: 600px;
 
     }
 
@@ -333,6 +341,9 @@ a {
 
     .bio {
         width: 300px;
+    }
+    .about-container{
+        height:1000px;
     }
 
     .skills {
