Changed E-mail address presentation as well as made the portfolio text clearly match which photo it is describing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -140,7 +140,12 @@ a {
     width: 400px;
     position: relative;
 }
-
+.port-item h4{
+    margin-bottom: 80px;
+}
+.port-item h3{
+    margin-top: 5px;
+}
 .port-img:hover {
     webkit-filter: blur(4px);
     filter: blur(4px);
@@ -211,11 +216,11 @@ a {
 .work-exp-box {
     margin-left: 20px;
 }
-
-.email {
-    width: 500px;
+#mail{
+    color: #003049;
+    font-size: 4rem;
+    margin-top: 40px;
 }
-
 .social-container {
     display: block;
     height: 140px;
@@ -414,5 +419,8 @@ a {
 
     .email-box {
         width: 350px;
+    }
+    #mail{
+        font-size: 3rem;
     }
 }
