--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,32 @@ header {
     z-index: 1;
 }
 
+.hero {
+    position: relative;
+}
+
+.pointer-arrow {
+    width: 30px;
+    height: 30px;
+    background-color: #003049;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 54px;
+    z-index: -1;
+}
+
+#about-pointer {
+    left: 30%;
+}
+
+#portfolio-pointer {
+    left: 1%;
+}
+
+#contact-pointer {
+    left: 56%
+}
+
 header::after {
     content: "";
     clear: both;
@@ -126,6 +152,7 @@ a {
 .nav-container {
     float: right;
     width: 700px;
+    position: relative;
 }
 
 .portfolio-container {
@@ -399,7 +426,7 @@ a {
 
     .work-exp-box {
         margin: 0 auto;
-        width:300px;
+        width: 300px;
     }
 
     .work-exp-box h2 {
